--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -45,4 +45,7 @@ http {
 
     include conf.d/*.conf;
     include sites-enabled/*.conf;
+
+    # ISUCON Image Cache
+    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=isucon_image:10m max_size=100m inactive=60m use_temp_path=off;
 }
