--- a/etc/nginx/sites-available/isucon.conf
+++ b/etc/nginx/sites-available/isucon.conf
@@ -8,4 +8,25 @@ server {
     proxy_set_header Host $host;
     proxy_pass http://localhost:8080;
   }
+
+  # Cache configuration for static files
+  location ~ ^/(favicon\.ico|css/|js/|img/) {
+    root /home/isucon/private_isu/webapp/public/;
+    expires 1d;
+  }
+
+  # Cache configuration for /image
+  location /image/ {
+    proxy_set_header Host $host;
+    proxy_pass http://localhost:8080;
+
+    # Enable caching
+    proxy_cache isucon_image;
+    proxy_cache_valid 200 7d; # Cache 200 responses for 7 day
+    proxy_cache_valid 404 1m;  # Cache 404 responses for 1 minute
+    proxy_cache_key $uri;
+
+    # Add cache headers
+    add_header X-Cache-Status $upstream_cache_status;
+  }
 }
