--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -1,11 +1,19 @@
 server {
-  listen 80;
+    listen 80;
 
-  client_max_body_size 10m;
-  root /public/;
+    client_max_body_size 10m;
+    root /home/isucon/private_isu/webapp/public
 
-  location / {
-    proxy_set_header Host $host;
-    proxy_pass http://app:8080;
-  }
+    # 静的ファイルをnginxが直接配信
+    location ~* \.(jpg|jpeg|png|gif|css|js|ico|svg|woff|woff2|ttf|eot|html)$ {
+        expires 7d;
+        add_header Cache-Control "public, max-age=604800, immutable";
+        try_files $uri =404;
+    }
+
+    # それ以外はアプリサーバーへ
+    location / {
+        proxy_set_header Host $host;
+        proxy_pass http://app:8080;
+    }
 }
